--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ aside {
     font-size: smaller;
 }
 
+aside #navLink {
+  display: block;
+  padding: 8px;
+  text-decoration: none;
+}
+
 /* Main content area */
 main {
     background-color: #1c2724;
