--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Inclusive Sans", sans-serif !important;
-    margin: 0;
+    margin: 0 !important;
     background-color: #141b1e;
     color: #dadada;
 }
@@ -18,7 +18,7 @@ body {
 /* General link styles */
 #container a {
     color: #8ccf7e;
-    font-weight: bold;
+    font-weight: bold !important;
 }
 
 #container a:hover {
@@ -89,29 +89,29 @@ body {
 
 /* Flex container for the layout */
 #flex {
-    display: flex;
+    display: flex !important;
 }
 
 /* Sidebar styles */
 aside {
     background-color: #141b1e;
-    width: 200px;
-    padding: 20px;
-    font-size: smaller;
+    width: 200px !important;
+    padding: 20px !important;
+    font-size: smaller !important;
 }
 
 aside #navLink {
-  display: block;
-  padding: 8px;
-  text-decoration: none;
+  display: block !important;
+  padding: 8px !important;
+  text-decoration: none !important;
 }
 
 /* Main content area */
 main {
-    background-color: #1c2724;
-    flex: 1;
-    padding: 20px;
-    order: 2;
+    background-color: #1c2724 !important;
+    flex: 1 !important;
+    padding: 20px !important;
+    order: 2 !important;
 }
 
 /* Grid styles */
@@ -238,7 +238,7 @@ footer {
 h1,
 h2,
 h3 {
-    color: #8ccf7e;
+    color: #8ccf7e !important;
 }
 
 h1 {
@@ -247,7 +247,7 @@ h1 {
 
 /* Strong text styles */
 strong {
-    color: #8ccf7e;
+    color: #8ccf7e !important;
 }
 
 /* Box styles */
