--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Inclusive Sans", sans-serif !important;
+    font-family: "Inclusive Sans", sans-serif;
     margin: 0 !important;
     background-color: #141b1e;
     color: #dadada;
@@ -18,7 +18,7 @@ body {
 /* General link styles */
 #container a {
     color: #8ccf7e;
-    font-weight: bold !important;
+    font-weight: bold;
 }
 
 #container a:hover {
@@ -68,14 +68,18 @@ body {
 #navbar li a:hover {
     color: #838887;
 }
+
 #navList .dropdown {
-    position: relative; /* Ensure dropdown menu position relative to the parent li */
+    position: relative;
+    /* Ensure dropdown menu position relative to the parent li */
 }
 
 #navList .dropdown .dropdown-menu {
-    display: none; /* Hide dropdown menu by default */
+    display: none;
+    /* Hide dropdown menu by default */
     position: absolute;
-    top: 100%; /* Position dropdown below the parent li */
+    top: 100%;
+    /* Position dropdown below the parent li */
     left: 0;
     background-color: #141b1e;
     padding: 10px;
@@ -83,35 +87,36 @@ body {
 }
 
 #navList .dropdown:hover .dropdown-menu {
-    display: block; /* Show dropdown menu on hover */
+    display: block;
+    /* Show dropdown menu on hover */
 }
 
 
 /* Flex container for the layout */
 #flex {
-    display: flex !important;
+    display: flex;
 }
 
 /* Sidebar styles */
 aside {
     background-color: #141b1e;
-    width: 200px !important;
-    padding: 20px !important;
-    font-size: smaller !important;
+    width: 200px;
+    padding: 20px;
+    font-size: smaller;
 }
 
 aside #navLink {
-  display: block !important;
-  padding: 8px !important;
-  text-decoration: none !important;
+    display: block;
+    padding: 8px;
+    text-decoration: none;
 }
 
 /* Main content area */
 main {
-    background-color: #1c2724 !important;
-    flex: 1 !important;
-    padding: 20px !important;
-    order: 2 !important;
+    background-color: #1c2724;
+    flex: 1;
+    padding: 20px;
+    order: 2;
 }
 
 /* Grid styles */
@@ -146,23 +151,23 @@ main {
     background: #1c2724;
     margin: 30px auto;
     position: relative;
-  }
+}
 
-  #toybox>* {
+#toybox>* {
     padding: 3px;
     transition-duration: 0.2s;
-  }
+}
 
-  #toybox>*:hover {
+#toybox>*:hover {
     transform: scale(2);
-    z-index: 30 !important;
+    z-index: 30;
     /* image-rendering: pixelated; */
-  }
+}
 
-  #toybox img {
+#toybox img {
     width: 15%;
     height: auto;
-  }
+}
 
 /* responsive design media query */
 @media (max-width: 1400px) {
@@ -186,32 +191,42 @@ main {
         flex-wrap: wrap;
     }
 }
+
 @media (max-width: 1024px) {
     .grid {
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     }
 }
+
 @media (max-width: 768px) {
     .grid {
         grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     }
+
     .hamburger {
-        display: block; /* Show hamburger menu icon on smaller screens */
+        display: block;
+        /* Show hamburger menu icon on smaller screens */
     }
+
     #navbar ul {
-        display: none; /* Hide the navbar list by default on smaller screens */
-        flex-direction: column; /* Stack items vertically */
+        display: none;
+        /* Hide the navbar list by default on smaller screens */
+        flex-direction: column;
+        /* Stack items vertically */
         position: absolute;
-        top: 40px; /* Position dropdown below navbar */
+        top: 40px;
+        /* Position dropdown below navbar */
         left: 0;
         width: 100%;
         background-color: #141b1e;
         padding: 10px;
-        z-index: 1000; /* Ensure it's on top of other content */
+        z-index: 1000;
+        /* Ensure it's on top of other content */
     }
 
     #navbar ul.active {
-        display: flex; /* Show navbar list when active class is added */
+        display: flex;
+        /* Show navbar list when active class is added */
     }
 
     #navbar li {
@@ -219,6 +234,7 @@ main {
         text-align: center;
     }
 }
+
 @media (max-width: 480px) {
     .grid {
         grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
