--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,26 @@ body[data-theme="light"] .navbar .btn-outline-light:hover {
     color: #ffffff;
 }
 
+#toTopBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #8ccf7e; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#toTopBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+
 .navbar .btn {
     border-radius: 50px;
     padding: 0.35rem 0.9rem;
