--- a/css/style.css
+++ b/css/style.css
@@ -104,23 +104,23 @@ body[data-theme="light"] .navbar .btn-outline-light:hover {
 
 /* navigate to top */
 #toTopBtn {
-  display: none; 
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  border: none;
-  outline: none;
-  background-color: #8ccf7e;
-  color: white; 
-  cursor: pointer; 
-  padding: 15px; 
-  border-radius: 10px; 
-  font-size: 18px; 
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #8ccf7e;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
 }
 
 #toTopBtn:hover {
-  background-color: #555; 
+    background-color: #555;
 }
 
 .navbar .btn {
@@ -193,13 +193,62 @@ body[data-theme="light"] .navbar .btn-outline-light:hover {
     z-index: 0;
 }
 
+/* wikipedia-esque table of contents */
+.toc {
+    display: table;
+    padding: 7px;
+    list-style-type: none;
+    margin-left: 0px;
+    direction: ltr;
+    text-align: left;
+    border: 1px solid #a2a9b1;
+    padding: 5px;
+    font-size: 95%;
+}
+
+.toc li {
+    margin-bottom: 0.1em;
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+.toc ul {
+    list-style: none;
+    line-height: 1.6;
+    padding: 0;
+}
+
+.toc ul ul {
+    margin: 0 0 0 2em;
+    text-align: left;
+}
+
+.tocnumber {
+    color: #202122;
+    text-decoration-color: #202122;
+}
+
+.toctitle {
+    text-align: center;
+}
+
+a:hover .tocnumber {
+    text-decoration: underline;
+    text-decoration-style: wavy;
+}
+
+a:hover .toctext {
+    text-decoration: underline;
+    text-decoration-style: wavy;
+}
+
 /* filter by tag */
 .project-filter {
     display: none;
 }
 
 .show {
-  display: block;
+    display: block;
 }
 
 #myBtnContainer {
